# multimedia-gst-plugin-aml-picsink

./: AUTHORS  ChangeLog  autogen.sh
src/: Makefile.am  gstamlpicsink.c  gstamlpicsink.h  gstplugin.c
src/libamlimageplayer/: imageplayer.c  imageplayer.h  netConnectionUtil.c  netConnectionUtil.h
